syntax = "proto3";

package model;

import "google/protobuf/wrappers.proto";
import "protos/model/food_product.proto";

option java_multiple_files = true;
option java_package = "com.aggiedish.protos.model";
option java_outer_classname = "AddFoodProductRequestOuterClass";

message AddFoodProductRequest {
  // The identifier of the eatery with which to associate the food product.
  google.protobuf.StringValue eatery_id = 1;

  // The food product to add.
  FoodProduct food_product = 2;

  // Refer to model.Menu.MenuDay.day for more information.
  google.protobuf.StringValue day = 3;
}
