syntax = "proto3";

package model;

import "protos/model/food_product.proto";

option java_multiple_files = true;
option java_package = "com.aggiedish.protos.model";
option java_outer_classname = "GetEateryFoodProductsResponseOuterClass";

message GetEateryFoodProductsResponse {
  repeated FoodProduct food_product = 1;
}
