syntax = "proto3";

package model;

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.aggiedish.protos.model";
option java_outer_classname = "CustomizationChoiceOuterClass";

  //   Examples: 
  //   [
  //     {name: "French Fries", price: "$0"},        // price = 0 if it is a free add-on
  //     {name: "Mac & Cheese", price: "$1.25"},
  //      ...
  //   ]
message CustomizationChoice {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue price = 2;
}
