syntax = "proto3";

package model;

import "google/protobuf/wrappers.proto";
import "protos/model/cart.proto";

option java_multiple_files = true;
option java_package = "com.aggiedish.protos.model";
option java_outer_classname = "SubmitCartRequestOuterClass";

message SubmitCartRequest {
  Cart cart = 1;

  google.protobuf.StringValue user_id = 2;

  google.protobuf.StringValue eatery_id = 3;

  // Refer to model.Menu.MenuDay.day for more information.
  google.protobuf.StringValue day = 4;

  // TODO(#70): Add payment structure.
}
